src/test/deca/syntax/invalid/arithmetic-moduloEqual.synt
arithmetic-moduloEqual.deca:12:5

